apps/docker-registry/manifests/60-browser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-browser
  labels:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: browser
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: browser
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
