apps/docker-registry/manifests/70-browser-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-browser
  labels:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: browser
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-browser
                port:
                  number: 8080
